// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test common-style style. <SpinnerWrap> snapshot. 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100vw;
  height: 100vh;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: all .5s ease-in-out;
  transition: all .5s ease-in-out;
  z-index: 999;
}

<div
  class="c0"
/>
`;

exports[`test common-style style. test <BallScaleMultiple /> snapshot. 1`] = `
.c0 {
  position: relative;
  -webkit-transform: translateY(-30px);
  -ms-transform: translateY(-30px);
  transform: translateY(-30px);
}

<div
  class="c0"
/>
`;

exports[`test common-style style. test <BallScaleMultipleInner /> snapshot. 1`] = `
.c0 {
  background-color: #fff;
  border-radius: 100%;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  position: absolute;
  left: -30px;
  top: 0;
  opacity: 0;
  margin: 0;
  width: 60px;
  height: 60px;
  -webkit-animation: cWzfKs 1s 0s linear infinite;
  animation: cWzfKs 1s 0s linear infinite;
}

.c0:nth-child(2) {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}

.c0:nth-child(3) {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}

<div
  class="c0"
/>
`;

exports[`test common-style style. test <LazyLoad /> snapshot. 1`] = `
.c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #FFF;
}

<div
  class="c0"
/>
`;
